--- a/src/App.css
+++ b/src/App.css
@@ -403,10 +403,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 	width: 60%;
 	background-color: #333333;
 }.skills .react::before{
-	width: 75%;
+	width: 65%;
 	background-color: #087a9f;
 }.skills .js::before{
-	width: 75%;
+	width: 60%;
 	background-color: #E3A324;
 }.skills .express::before{
 	width: 50%;
@@ -495,6 +495,20 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .project .nav.nav-pills .nav-link.active {
     border: 1px solid rgba(255, 255, 255, 1);
 }
+@media (max-width: 900px){
+  .project p{
+    font-size: 15px;
+    width:  100%;
+  }
+  .about img{
+    width: 50%;
+    display: block;
+    margin: auto;
+  }
+  .about .title{
+    margin: auto;
+  }
+}
 .nav-link#projects-tabs-tab-first {
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 55px 0px 0px 55px;
@@ -564,6 +578,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .projLink:hover{
   color: red;
+}
+.project .warning{
+  color: rgb(189, 43, 43);
 }
 
 /************ Projects Css ************/
@@ -741,6 +758,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 
 @media (max-width: 900px){
+  .about{
+    padding: 2.5rem 0;
+    margin-bottom: 50px;
+    margin-top: 0px;
+  }
   .about-content {
       display: grid;
       grid-template-columns: 100%;
@@ -750,6 +772,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   .projectCard{
     height: 200px!important;
   }
+  
 }
 
 @media (max-width: 500px){
